[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/court/wall.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/EdgeOfTheGalaxyRegular_80.tres" type="DynamicFont" id=2]
[ext_resource path="res://court.gd" type="Script" id=3]
[ext_resource path="res://sideWall.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 522, 10 )

[node name="Court" type="Node2D"]
script = ExtResource( 3 )

[node name="top wall" type="StaticBody2D" parent="."]
position = Vector2( 512, 0 )

[node name="Sprite" type="Sprite" parent="top wall"]
scale = Vector2( 1044, 20 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="top wall"]
shape = SubResource( 1 )

[node name="bottom wall" type="StaticBody2D" parent="."]
position = Vector2( 512, 600 )

[node name="Sprite" type="Sprite" parent="bottom wall"]
scale = Vector2( 1044, 20 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="bottom wall"]
shape = SubResource( 1 )

[node name="leftScoreLabel" type="Label" parent="."]
margin_left = 282.0
margin_top = 60.0
margin_right = 482.0
margin_bottom = 150.0
custom_fonts/font = ExtResource( 2 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rightScoreLabel" type="Label" parent="."]
margin_left = 542.0
margin_top = 60.0
margin_right = 742.0
margin_bottom = 150.0
custom_fonts/font = ExtResource( 2 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="leftWall" parent="." instance=ExtResource( 4 )]

[node name="rightWall" parent="." instance=ExtResource( 4 )]
position = Vector2( 1024, 0 )
[connection signal="side_wall_hit" from="leftWall" to="." method="_on_leftWall_side_wall_hit"]
[connection signal="side_wall_hit" from="rightWall" to="." method="_on_rightWall_side_wall_hit"]
